[gd_scene load_steps=18 format=2]

[ext_resource path="res://UI/Profile.png" type="Texture" id=1]
[ext_resource path="res://UI/CharInfoUI.gd" type="Script" id=2]
[ext_resource path="res://Images/Hands.png" type="Texture" id=3]
[ext_resource path="res://Images/Vest.png" type="Texture" id=4]
[ext_resource path="res://Fonts/BOLD_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://Images/Avatars.png" type="Texture" id=6]
[ext_resource path="res://UI/Bar.png" type="Texture" id=7]
[ext_resource path="res://UI/Inventory Shell.png" type="Texture" id=8]
[ext_resource path="res://UI/Button 1.png" type="Texture" id=9]
[ext_resource path="res://UI/BarTheme.tres" type="Theme" id=10]
[ext_resource path="res://Fonts/NORMAL_font.tres" type="DynamicFont" id=11]
[ext_resource path="res://Images/Profession.png" type="Texture" id=12]
[ext_resource path="res://Images/Health.png" type="Texture" id=13]
[ext_resource path="res://Images/Fear.png" type="Texture" id=14]
[ext_resource path="res://Images/Hobby.png" type="Texture" id=15]
[ext_resource path="res://Images/Extra.png" type="Texture" id=16]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0509804, 0.529412, 0.0705882, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.8, 0.8, 0.8, 0 )

[node name="CharInfoUI" type="Control"]
anchor_right = 0.25
anchor_bottom = 0.889
margin_bottom = 7.91998
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Profile" type="Sprite" parent="."]
position = Vector2( 159, 325 )
scale = Vector2( 0.5, 0.49 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Name" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -124.0
margin_top = 2.0
margin_right = 124.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 5 )
text = "Name"
align = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 165.0
margin_top = 40.0
margin_right = 251.0
margin_bottom = 130.0
rect_min_size = Vector2( 55, 55 )
rect_scale = Vector2( 0.75, 0.75 )

[node name="Age" type="Label" parent="VBoxContainer2"]
margin_right = 86.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 5 )
text = "0 age"
align = 1

[node name="Status2" type="Label" parent="VBoxContainer2"]
modulate = Color( 0.32549, 0.498039, 0.858824, 1 )
margin_top = 30.0
margin_right = 86.0
margin_bottom = 90.0
rect_min_size = Vector2( 85, 60 )
custom_fonts/font = ExtResource( 5 )
text = "Outside"
align = 1
autowrap = true

[node name="Avatars" type="Sprite" parent="."]
position = Vector2( 271, 72 )
scale = Vector2( 0.0932527, 0.0854767 )
texture = ExtResource( 6 )
hframes = 7
vframes = 3

[node name="VBoxContainer" type="GridContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 2.0
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -210.0
margin_right = -328.0
margin_bottom = -130.0
columns = 2
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 65.0
margin_bottom = 80.0
rect_min_size = Vector2( 65, 80 )

[node name="HPLabel" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_right = 65.0
margin_bottom = 14.0
hint_tooltip = "ababababab
Fsfdf
sfsfsf"
text = "HP"
align = 1

[node name="HpBar" type="ProgressBar" parent="VBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 65.0
margin_bottom = 38.0
rect_min_size = Vector2( 60, 20 )
custom_colors/font_color = Color( 0.364706, 0.717647, 0.0980392, 1 )
custom_styles/fg = SubResource( 1 )
max_value = 3.0
step = 1.0
value = 1.0
percent_visible = false

[node name="Bar" type="Sprite" parent="VBoxContainer/VBoxContainer/HpBar"]
position = Vector2( 24, 14 )
scale = Vector2( 1, 1.5 )
texture = ExtResource( 7 )
offset = Vector2( -1, -2.66666 )

[node name="Bar2" type="Sprite" parent="VBoxContainer/VBoxContainer/HpBar"]
position = Vector2( 44, 14 )
scale = Vector2( 1, 1.5 )
texture = ExtResource( 7 )
offset = Vector2( -1, -2.66666 )

[node name="DexLabel" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 65.0
margin_bottom = 56.0
text = "Dexterity"
align = 1

[node name="DexBar" type="ProgressBar" parent="VBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 65.0
margin_bottom = 80.0
rect_min_size = Vector2( 60, 20 )
custom_colors/font_color = Color( 0.364706, 0.717647, 0.0980392, 1 )
custom_styles/fg = SubResource( 1 )
max_value = 3.0
step = 1.0
value = 1.0
percent_visible = false

[node name="Bar" type="Sprite" parent="VBoxContainer/VBoxContainer/DexBar"]
position = Vector2( 24, 14 )
scale = Vector2( 1, 1.5 )
texture = ExtResource( 7 )
offset = Vector2( -1, -2.66666 )

[node name="Bar2" type="Sprite" parent="VBoxContainer/VBoxContainer/DexBar"]
position = Vector2( 44, 14 )
scale = Vector2( 1, 1.5 )
texture = ExtResource( 7 )
offset = Vector2( -1, -2.66666 )

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
margin_left = 69.0
margin_right = 134.0
margin_bottom = 80.0
rect_min_size = Vector2( 65, 80 )

[node name="StrLabel" type="Label" parent="VBoxContainer/VBoxContainer2"]
margin_right = 65.0
margin_bottom = 14.0
text = "Strength"
align = 1
valign = 1

[node name="StrBar" type="ProgressBar" parent="VBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 65.0
margin_bottom = 38.0
rect_min_size = Vector2( 60, 20 )
custom_colors/font_color = Color( 0.364706, 0.717647, 0.0980392, 1 )
custom_styles/fg = SubResource( 1 )
max_value = 3.0
step = 1.0
value = 1.0
percent_visible = false

[node name="Bar" type="Sprite" parent="VBoxContainer/VBoxContainer2/StrBar"]
position = Vector2( 24, 14 )
scale = Vector2( 1, 1.5 )
texture = ExtResource( 7 )
offset = Vector2( -1, -2.66666 )

[node name="Bar2" type="Sprite" parent="VBoxContainer/VBoxContainer2/StrBar"]
position = Vector2( 44, 14 )
scale = Vector2( 1, 1.5 )
texture = ExtResource( 7 )
offset = Vector2( -1, -2.66666 )

[node name="IntLabel" type="Label" parent="VBoxContainer/VBoxContainer2"]
margin_top = 42.0
margin_right = 65.0
margin_bottom = 56.0
text = "Intellect"
align = 1

[node name="IntBar" type="ProgressBar" parent="VBoxContainer/VBoxContainer2"]
margin_top = 60.0
margin_right = 65.0
margin_bottom = 80.0
rect_min_size = Vector2( 60, 20 )
custom_colors/font_color = Color( 0.364706, 0.717647, 0.0980392, 1 )
custom_styles/fg = SubResource( 1 )
max_value = 3.0
step = 1.0
value = 1.0
percent_visible = false

[node name="Bar" type="Sprite" parent="VBoxContainer/VBoxContainer2/IntBar"]
position = Vector2( 24, 14 )
scale = Vector2( 1, 1.5 )
texture = ExtResource( 7 )
offset = Vector2( -1, -2.66666 )

[node name="Bar2" type="Sprite" parent="VBoxContainer/VBoxContainer2/IntBar"]
position = Vector2( 44, 14 )
scale = Vector2( 1, 1.5 )
texture = ExtResource( 7 )
offset = Vector2( -1, -2.66666 )

[node name="CloseButton" type="Button" parent="."]
margin_left = 290.0
margin_top = 2.0
margin_right = 314.0
margin_bottom = 26.0
text = "X"

[node name="Hands" type="Sprite" parent="."]
position = Vector2( 88, 248 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Vest" type="Sprite" parent="."]
position = Vector2( 232, 248 )
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="InventoryShell" type="Sprite" parent="."]
visible = false
position = Vector2( -232, 408 )
scale = Vector2( 0.5, 0.496914 )
texture = ExtResource( 8 )
offset = Vector2( 638, -141.373 )

[node name="InventoryShell2" type="Sprite" parent="."]
visible = false
position = Vector2( -88, 408 )
scale = Vector2( 0.5, 0.496914 )
texture = ExtResource( 8 )
offset = Vector2( 638, -141.373 )

[node name="InventoryShell3" type="Sprite" parent="."]
visible = false
position = Vector2( -232, 496 )
scale = Vector2( 0.5, 0.496914 )
texture = ExtResource( 8 )
offset = Vector2( 638, -141.373 )

[node name="InventoryShell4" type="Sprite" parent="."]
visible = false
position = Vector2( -87, 495 )
scale = Vector2( 0.5, 0.496914 )
texture = ExtResource( 8 )
offset = Vector2( 638, -141.373 )

[node name="InventoryShell5" type="Sprite" parent="."]
visible = false
position = Vector2( -232, 584 )
scale = Vector2( 0.5, 0.496914 )
texture = ExtResource( 8 )
offset = Vector2( 638, -141.373 )

[node name="InventoryShell6" type="Sprite" parent="."]
visible = false
position = Vector2( -88, 584 )
scale = Vector2( 0.5, 0.496914 )
texture = ExtResource( 8 )
offset = Vector2( 638, -141.373 )

[node name="AcceptButton" type="Button" parent="."]
modulate = Color( 0.231373, 0.811765, 0.239216, 1 )
margin_left = 26.0
margin_top = 576.0
margin_right = 150.0
margin_bottom = 623.0
theme = ExtResource( 10 )
custom_fonts/font = ExtResource( 5 )
text = "Accept"
icon = ExtResource( 9 )
flat = true
icon_align = 1

[node name="DenieButton" type="Button" parent="."]
modulate = Color( 1, 0.117647, 0.117647, 1 )
margin_left = 168.0
margin_top = 576.0
margin_right = 292.0
margin_bottom = 623.0
custom_fonts/font = ExtResource( 5 )
text = "Decline"
icon = ExtResource( 9 )
flat = true
icon_align = 1

[node name="List" type="VBoxContainer" parent="."]
margin_left = 23.0
margin_top = 40.0
margin_right = 163.0
margin_bottom = 200.0

[node name="ProfessionLabel" type="Label" parent="List"]
margin_right = 140.0
margin_bottom = 26.0
rect_min_size = Vector2( 20, 20 )
custom_fonts/font = ExtResource( 11 )
text = "Profession"
align = 1
valign = 1

[node name="Profession" type="Sprite" parent="List"]
position = Vector2( -5, 12 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 12 )

[node name="HealthLabel" type="Label" parent="List"]
margin_top = 30.0
margin_right = 140.0
margin_bottom = 56.0
rect_min_size = Vector2( 20, 20 )
custom_fonts/font = ExtResource( 11 )
text = "Health"
align = 1
valign = 1

[node name="Health" type="Sprite" parent="List"]
position = Vector2( -5, 42 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 13 )

[node name="FearLabel" type="Label" parent="List"]
margin_top = 60.0
margin_right = 140.0
margin_bottom = 86.0
rect_min_size = Vector2( 20, 20 )
custom_fonts/font = ExtResource( 11 )
text = "Fear"
align = 1
valign = 1

[node name="Fear" type="Sprite" parent="List"]
position = Vector2( -5, 70 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 14 )

[node name="HobbyLabel" type="Label" parent="List"]
margin_top = 90.0
margin_right = 140.0
margin_bottom = 116.0
rect_min_size = Vector2( 20, 20 )
custom_fonts/font = ExtResource( 11 )
text = "Hobby"
align = 1
valign = 1

[node name="Hobby" type="Sprite" parent="List"]
position = Vector2( -3, 100 )
texture = ExtResource( 15 )

[node name="ExtraLabel" type="Label" parent="List"]
margin_top = 120.0
margin_right = 140.0
margin_bottom = 146.0
rect_min_size = Vector2( 20, 20 )
custom_fonts/font = ExtResource( 11 )
text = "Extra"
align = 1
valign = 1

[node name="Extra" type="Sprite" parent="List"]
position = Vector2( -5, 130 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 16 )

[connection signal="draw" from="." to="." method="_on_CharInfoUI_draw"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="AcceptButton" to="." method="_on_AcceptButton_pressed"]
[connection signal="pressed" from="DenieButton" to="." method="_on_DenieButton_pressed"]
